# metadata-composer

./: .editorconfig  .gitignore  .prettierrc.json  LICENSE  Readme.md  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
.github/workflows/: build-on-push.yml
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  pinia.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  cmd.rs  init.rs  lib.rs
src-tauri/src/api/: dl_site.rs  http.rs  mod.rs
src-tauri/src/cmd/: append.rs  mod.rs
src-tauri/src/command/: append.rs  mod.rs
src-tauri/src/core/: mod.rs  util.rs
src-tauri/src/core/config/: def.rs  mod.rs  state.rs
src-tauri/src/core/data/: collection.rs  library.rs  metadata.rs  mod.rs  state.rs
src-tauri/src/core/data/metadata/: archive_info.rs  content_info.rs  deploy_info.rs  mod.rs
src-tauri/src/core/util/: compress.rs  config.rs  img.rs  mod.rs  path_ext.rs
src-tauri/src/init/: context.rs  invoke_handler.rs  mod.rs
src/api/: cmd.ts  dialog.ts  event.ts  hook.ts  q-ext.ts  tray.ts  types.ts  util.ts
src/assets/: main.scss
src/components/: AsyncImage.vue
src/composables/: useDarkStyle.ts  useNotify.ts  useTray.ts
src/hooks/: useDarkStyle.ts  useInit.ts  useTray.ts
src/i18n/: index.ts
src/i18n/locales/: en-US.yaml  zh-CN.yaml
src/layout/: BaseLayout.vue  ContextMenu.vue
src/layout/comp/: BaseLayoutDropDown.vue
src/pages/config/: index.vue
src/pages/config/script/: useConfig.ts
src/pages/edit/: index.vue
src/pages/edit/comp/: EditAlias.vue  EditArchiveInfo.vue  EditCollection.vue  EditContentInfo.vue  EditDescription.vue  EditImage.vue  EditRating.vue  EditTag.vue  EditTitle.vue
src/pages/edit/script/: define.ts  function.ts  useArchiveInfo.ts  useContentInfo.ts  useEdit.ts  useEditDefine.ts  useImg.ts
src/pages/main/: index.vue
src/pages/main/comp/: MainItemCard.vue  MainTableTopLeft.vue  MainTableTopRight.vue
src/pages/main/script/: define.ts  function.ts  useMainDefine.ts  useOperation.ts  useTable.ts  useTableStore.ts
src/router/: index.ts
src/stores/: config.ts  database.ts  global.ts  index.ts  library.ts  table.ts
