[package]
name = "composer"
description = "A manager for metadata"
version = "0.5.0"
authors = ["Rhynia"]
license = "GPL-3"
edition = "2024"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
log = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
bson = "2.15"
ts-rs = { version = "11.0", features = ["chrono-impl", "uuid-impl"] }
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.5"
uuid = { version = "1.17", features = ["v4"] }
redb = "2.6"
const_format = { version = "0.2", features = ["fmt"] }
encoding_rs = "0.8"
image = { version = "0.25", features = ["png", "jpeg", "webp"] }
image_hasher = "3.0"
fs_extra = "1.3"
glob = "0.3"
reqwest = { version = "0.12" }
scraper = "0.23"
tokio = { version = "1.46", features = ["macros"] }
tokio-stream = "0.1"
async-walkdir = "2.1"
tauri = { version = "2.7", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-pinia = "3.7"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
regex = "1.11.1"
tauri-plugin-notification = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"

[profile.dev]
incremental = true

[profile.release]
codegen-units = 4
opt-level = 3
lto = true
debug = false
panic = "abort"
